--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,20 @@
-# History files
-.Rhistory
-.Rapp.history
-
-# Session Data files
-.RData
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-/*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
+/.Rproj.user/*
+*.Rhistory
+*.Rproj
+*.Rbuildignore
+*.DS_Store
+*.eps
+.Rproj.user
+.Rprofile
+RLumModel.Debug/
+RLumModel.Experiment/
+packrat/
+RLumModel.Rcheck/
+RLumModel.BuildResults/*.tar.gz
+RLumModel.BuildResults/*.zip
+RLumModel.BuildResults/*.tgz
+packrat/lib*/
+packrat/src/
+src/*.o
+src/*.dll
+*.RData
