Upate .Rbuildignore and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
 /.Rproj.user/*
 *.Rhistory
 *.Rproj
-*.Rbuildignore
 *.DS_Store
 *.eps
 .Rproj.user
 .Rprofile
-RLumModel.Debug/
-RLumModel.Experiment/
+RLumCarlo.Debug/
+RLumCarlo.Experiment/
 packrat/
-RLumModel.Rcheck/
-RLumModel.BuildResults/*.tar.gz
-RLumModel.BuildResults/*.zip
-RLumModel.BuildResults/*.tgz
+RLumCarlo.Rcheck/
+RLumCarlo.BuildResults/*.tar.gz
+RLumCarlo.BuildResults/*.zip
+RLumCarlo.BuildResults/*.tgz
 packrat/lib*/
 packrat/src/
 src/*.o
