--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(run_MC_CW_IRSL)
 export(run_MC_ISO)
 export(run_MC_LM_OSL)
 export(run_MC_TL)
+export(run_MC_TL_DELOC)
 import(abind)
 import(doParallel)
 import(foreach)
