--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(run_MC_ISO)
 export(run_MC_LM_OSL)
 export(run_MC_TL)
 export(run_MC_TL_DELOC)
+export(run_MC_TL_LOC)
 import(abind)
 import(doParallel)
 import(foreach)
