--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,10 @@ import(methods)
 import(parallel)
 importFrom(Rcpp,evalCpp)
 importFrom(grDevices,adjustcolor)
+importFrom(graphics,grid)
+importFrom(graphics,legend)
 importFrom(graphics,lines)
+importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,polygon)
 importFrom(utils,modifyList)
