--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,18 @@
 
 S3method(summary,RLumCarlo_Model_Output)
 export(plot_RLumCarlo)
-export(run_MC_CW_IRSL)
 export(run_MC_CW_IRSL_DELOC)
 export(run_MC_CW_IRSL_LOC)
-export(run_MC_ISO)
+export(run_MC_CW_IRSL_TUN)
 export(run_MC_ISO_DELOC)
 export(run_MC_ISO_LOC)
-export(run_MC_LM_OSL)
+export(run_MC_ISO_TUN)
 export(run_MC_LM_OSL_DELOC)
 export(run_MC_LM_OSL_LOC)
-export(run_MC_TL)
+export(run_MC_LM_OSL_TUN)
 export(run_MC_TL_DELOC)
 export(run_MC_TL_LOC)
+export(run_MC_TL_TUN)
 import(abind)
 import(doParallel)
 import(foreach)
