--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ import(methods)
 import(parallel)
 importFrom(Rcpp,evalCpp)
 importFrom(grDevices,adjustcolor)
+importFrom(grDevices,rainbow)
 importFrom(graphics,grid)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
