--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Author: Johannes Friedrich [aut, trl] (<https://orcid.org/0000-0002-0805-9547>),
     Christoph Schmidt [aut] (<https://orcid.org/0000-0002-2309-3209>),
     Ena Rajovic [ctb],
     Alex Roy Duncan [ctb],
-    Christian Laag [ctb]
+    Christian Laag [ctb] (<https://orcid.org/0000-0002-6012-1029>)
 Authors@R: c(
     person("Johannes", "Friedrich", role = c("aut","trl"), comment = c(ORCID = "0000-0002-0805-9547")),
     person("Sebastian", "Kreutzer", role = c("aut","trl","cre"), comment = c(ORCID = "0000-0002-0734-2199"),
@@ -18,7 +18,7 @@ Authors@R: c(
     person("Christoph", "Schmidt", role = c("aut"), comment = c(ORCID = "0000-0002-2309-3209")),
     person("Ena", "Rajovic", role = c("ctb")), 
     person("Alex Roy", "Duncan", role = c("ctb")),
-    person("Christian", "Laag", role = c("ctb"))
+    person("Christian", "Laag", role = c("ctb"), comment = c(ORCID = "0000-0002-6012-1029"))
     )
 Maintainer: Sebastian Kreutzer <sebastian.kreutzer@u-bordeaux-montaigne.fr>
 Description: A collection of functions to simulate luminescence production in minerals using Monte-Carlo methods. 
