--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,12 @@ matrix:
   - os: osx
     r: release
     before_install:
-      #- sudo rm '/usr/local/include/c++'
-      - sudo rm '/usr/local/bin/gfortran'
-      - brew install gcc
-      - brew install jags
+      - |
+        ## Test whether gcc is already installed
+        if ! brew ls --versions gcc > /dev/null; then
+            sudo rm '/usr/local/bin/gfortran'
+            brew install gcc
+        fi
       - brew install libssh2
       - brew install libgit2
     env: CACHE_NAME=JOB4
