--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,9 +40,11 @@ Imports:
   doParallel (>= 1.0.15),
   foreach (>= 1.5.0),
   khroma (>= 1.3.0),
-  parallel,
   methods,
-  Rcpp (>= 1.0.4)
+  parallel,
+  Rcpp (>= 1.0.4),
+  scatterplot3d (>= 0.3),
+  stats
 Suggests: 
   R.rsp (>= 0.43.2),
   testthat (>= 2.3.2)
