--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(c,RLumCarlo_Model_Output)
 S3method(summary,RLumCarlo_Model_Output)
+export(create_ClusterSystem)
 export(plot_RLumCarlo)
 export(run_MC_CW_IRSL_LOC)
 export(run_MC_CW_IRSL_TUN)
@@ -26,6 +27,7 @@ importFrom(grDevices,rainbow)
 importFrom(graphics,grid)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
+importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,polygon)
