--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,17 @@
 # DO NOT CHANGE the "init" and "install" sections below
-
 # Download script file from GitHub
 init:
   ps: |
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
+install:
+  ps: Bootstrap
 
-  install:
-    - ps: Bootstrap
-
-  # Adapt as necessary starting from here
-  environment:
-    global:
-      WARNINGS_ARE_ERRORS: 1
+# Adapt as necessary starting from here
+environment:
+  global:
+    WARNINGS_ARE_ERRORS: 1
 
   matrix:
   - R_VERSION: devel
@@ -35,8 +33,7 @@ test_script:
   - travis-tool.sh run_tests
 
 on_failure:
-  - 7z a failure.zip *.Rcheck\*
-  - appveyor PushArtifact failure.zip
+  - travis-tool.sh dump_logs
 
 artifacts:
   - path: '*.Rcheck\**\*.log'
