--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RLumCarlo
 Type: Package
 Title: Monte-Carlo Methods for Simulating Luminescence Phenomena
-Version: 0.1.2
+Version: 0.1.3
 Date: 2020-06-05
 Author: Johannes Friedrich [aut, trl] (<https://orcid.org/0000-0002-0805-9547>),
     Sebastian Kreutzer [aut, trl, cre] (<https://orcid.org/0000-0002-0734-2199>),
@@ -29,7 +29,7 @@ Description: A collection of functions to simulate luminescence production in
     and Pagonis et al. (2019) <doi:10.1016/j.jlumin.2018.11.024)>). 
     Supported stimulation methods are thermal luminescence (TL), 
     continuous-wave optically stimulated luminescence (CW-OSL), 
-    linerarly-modulated optically stimulated luminescence (LM-OSL), 
+    linearly-modulated optically stimulated luminescence (LM-OSL), 
     linearly-modulated infrared stimulated luminescence (LM-IRSL),
     and isothermal luminescence (ITL or ISO-TL).
 Contact: Package Developer Team <sebastian.kreutzer@aber.ac.uk>
