Swap authors order

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,18 +7,18 @@ Author: Johannes Friedrich [aut, trl] (<https://orcid.org/0000-0002-0805-9547>),
     Sebastian Kreutzer [aut, trl, cre] (<https://orcid.org/0000-0002-0734-2199>),
     Vasilis Pagonis [aut] (<https://orcid.org/0000-0002-4852-9312>),
     Christoph Schmidt [aut] (<https://orcid.org/0000-0002-2309-3209>),
+    Christian Laag [ctb] (<https://orcid.org/0000-0002-6012-1029>),
     Ena Rajovic [ctb],
     Alex Roy Duncan [ctb],
-    Christian Laag [ctb] (<https://orcid.org/0000-0002-6012-1029>)
 Authors@R: c(
     person("Johannes", "Friedrich", role = c("aut","trl"), comment = c(ORCID = "0000-0002-0805-9547")),
     person("Sebastian", "Kreutzer", role = c("aut","trl","cre"), comment = c(ORCID = "0000-0002-0734-2199"),
             email = "sebastian.kreutzer@aber.ac.uk"),
     person("Vasilis", "Pagonis", role = c("aut"), comment = c(ORCID = "0000-0002-4852-9312")),
     person("Christoph", "Schmidt", role = c("aut"), comment = c(ORCID = "0000-0002-2309-3209")),
+    person("Christian", "Laag", role = c("ctb"), comment = c(ORCID = "0000-0002-6012-1029")),
     person("Ena", "Rajovic", role = c("ctb")), 
-    person("Alex Roy", "Duncan", role = c("ctb")),
-    person("Christian", "Laag", role = c("ctb"), comment = c(ORCID = "0000-0002-6012-1029"))
+    person("Alex Roy", "Duncan", role = c("ctb"))
     )
 Maintainer: Sebastian Kreutzer <sebastian.kreutzer@aber.ac.uk>
 Description: A collection of functions to simulate luminescence production in 
