--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Description: A collection of functions to simulate luminescence production in
     delocalised transitions (e.g., Chen and McKeever (1997) <doi:10.1142/2781>), 
     localised transitions (e.g., Pagonis et al. (2019) <doi:10.1016/j.jlumin.2018.11.024>) 
     and tunnelling transitions (Jain et al. (2012) <doi:10.1088/0953-8984/24/38/385402> 
-    and Pagonis et al. (2019) <doi:10.1016/j.jlumin.2018.11.024)>). 
+    and Pagonis et al. (2019) <doi:10.1016/j.jlumin.2018.11.024>). 
     Supported stimulation methods are thermal luminescence (TL), 
     continuous-wave optically stimulated luminescence (CW-OSL), 
     linearly-modulated optically stimulated luminescence (LM-OSL), 
