--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: r
 cache: packages
 warnings_are_errors: true
-sudo: required
 
 r_packages:
   - devtools
@@ -15,7 +14,7 @@ r_packages:
   - R.rsp
 
 ## test different platforms
-matrix:
+jobs:
   include:
   - os: linux
     r: oldrel
