UPdate readme and GitHub Actions

--- a/.github/workflows/GitHub_Actions_CI.yaml
+++ b/.github/workflows/GitHub_Actions_CI.yaml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - master
+      - dev_*
   pull_request:
     branches:
       - master
+      - dev_*
 
 name: GitHub Actions CI
 
