--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.17.1.1
-pkgdown: 2.0.2
+pandoc: '2.18'
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   RLumCarlo_-_Getting_started_with_RLumCarlo: RLumCarlo_-_Getting_started_with_RLumCarlo.html
-last_built: 2022-02-21T08:33Z
+last_built: 2022-08-08T15:24Z
 
