--- a/.github/workflows/GitHub_Actions_CI.yaml
+++ b/.github/workflows/GitHub_Actions_CI.yaml
@@ -11,6 +11,9 @@ on:
 
 name: GitHub Actions CI
 
+env:
+  cache-version: v1
+
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
@@ -19,11 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macos-13,   r: 'release'}
-          - {os: macos-12,   r: 'oldrel'}
-          - {os: ubuntu-22.04,   r: 'devel'}
-          - {os: ubuntu-22.04,   r: 'release'}
-          - {os: ubuntu-22.04,   r: 'oldrel'}
+          - {os: ubuntu-latest,   r: 'devel', not_cran: 'true'}
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
